--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "class-transformer-global-storage",
-  "version": "0.4.0",
+  "version": "0.4.1-1",
   "description": "Proper decorator-based transformation / serialization / deserialization of plain javascript objects to class constructors with global storage fix",
   "author": "TypeStack contributors, Petr Zahradnik",
   "license": "MIT",
